images and multimedia

--- a/image_and_multimedia.html
+++ b/image_and_multimedia.html
@@ -23,5 +23,10 @@
         Your browser does not suppport the audio tag
     </audio>
 
+    <video width="200" height="100" controls>
+
+        <source src="./images/Joren_Falls_Izu_Jap.mp4" type="video/mp4" >
+    </video>
+
   </body>
 </html>
