--- a/semantic.html
+++ b/semantic.html
@@ -4,17 +4,37 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Semantic Tags</title>
+<link rel="stylesheet" href="apna_khud_ka_naam.css">
+
+
+<style>
+*{
+  margin: 0;
+  padding: 0;
+}
+
+
+body{
+  background-color: tan;
+  font-family:Georgia, 'Times New Roman', Times, serif ;
+  color: brown;
+  padding-top:20px;
+  padding-bottom: 20px;
+  margin: 20px;
+}
+
+</style>
+
+
   </head>
   <body>
-    <header style="border: 1px solid black; background-color: aqua">
-      <h1 style="border: 1px solid black; background-color: bisque">
-        Website Title
-      </h1>
+    <header style="border: 5px solid salmon; background-color: cornflowerblue;">
+      <h1>Website Title</h1>
 
-      <nav style="border: 1px solid salmon">Navigation Menu</nav>
+      <nav>Navigation Menu</nav>
     </header>
 
-    <main style="border: 1px solid black">
+    <main>
       <article>
         <h2>Article Title</h2>
         <p>
@@ -25,26 +45,21 @@
         </p>
       </article>
     </main>
-<section style="border: 1px solid black;">
-<h3 style="border: 1px solid black;">Services</h3>
-<p>We offer various services</p>
+    <section>
+      <h3>Services</h3>
+      <p>We offer various services</p>
+    </section>
 
-</section>
+    <aside>
+      <h3>Related Articles</h3>
+      <ul>
+        <li><a href="#">Article 1</a></li>
+        <li>Article 2</li>
+      </ul>
+    </aside>
 
-<aside style="border: 1px solid black;">
-<h3>Related Articles</h3>
-<ul>
-    <li><a href="#">Article 1</a></li>
-    <li>Article 2</li>
-</ul>
-
-</aside>
-
-<footer style="border: 1px solid black;">
-<p>&copy; 2024 HTS Learn</p>
-
-</footer>
-
-
+    <footer>
+      <p>&copy; 2024 HTS Learn</p>
+    </footer>
   </body>
 </html>
