dom and id and class

--- a/semantic.html
+++ b/semantic.html
@@ -23,6 +23,8 @@ body{
   margin: 20px;
 }
 
+
+
 </style>
 
 
@@ -35,7 +37,18 @@ body{
     </header>
 
     <main>
-      <article>
+      <article id="my-article">
+        <h2>Article Title</h2>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam itaque
+          tenetur magnam exercitationem, laborum a blanditiis iure, est
+          laudantium facere inventore tempore quidem repellendus. Officia dicta
+          id dignissimos deleniti numquam!
+        </p>
+      </article>
+
+
+      <article style="background-color: aqua;">
         <h2>Article Title</h2>
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam itaque
@@ -45,12 +58,12 @@ body{
         </p>
       </article>
     </main>
-    <section>
+    <section class="my-section">
       <h3>Services</h3>
       <p>We offer various services</p>
     </section>
 
-    <aside>
+    <aside class="my-section">
       <h3>Related Articles</h3>
       <ul>
         <li><a href="#">Article 1</a></li>
@@ -58,7 +71,7 @@ body{
       </ul>
     </aside>
 
-    <footer>
+    <footer id="my-article">
       <p>&copy; 2024 HTS Learn</p>
     </footer>
   </body>
