--- a/class.html
+++ b/class.html
@@ -7,10 +7,15 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="unique" class="common">this div uses an 'id' and is unique</div>
+    <!-- <div id="unique" class="common">this div uses an 'id' and is unique</div>
 
     <div class="common">this div uses a 'class' and can be reused</div>
 
     <div class="common" id="unique" >this is another div with same class</div>
+ -->
+
+    <div>my empty div</div>
+
+<p>this is paragraph</p>
   </body>
 </html>
