--- a/flex.html
+++ b/flex.html
@@ -27,20 +27,17 @@
       <h1>Website Title</h1>
 
       <nav>
-<ul>
-<li><a href="#">Home </a></li>
-<li><a href="#">About </a></li>
-<li><a href="#">Services </a></li>
-<li><a href="#">Contact </a></li>
-
-</ul>
-
-
+        <ul>
+          <li><a href="#">Home </a></li>
+          <li><a href="#">About </a></li>
+          <li><a href="#">Services </a></li>
+          <li><a href="#">Contact </a></li>
+        </ul>
       </nav>
     </header>
 
-    <main >
-      <article >
+    <main>
+      <article>
         <h2>Article Title</h2>
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam itaque
@@ -69,7 +66,7 @@
       <h3>Related Articles</h3>
       <ul>
         <li><a href="#">Article 1</a></li>
-        <li>Article 2</li>
+        <li><a href="#">Article 2 </a></li>
       </ul>
     </aside>
 
