javascript history, data types, primitive and non primitive

--- a/flex.html
+++ b/flex.html
@@ -37,7 +37,7 @@
     </header>
 
     <main>
-      <article>
+      <article id="anything">
         <h2>Article Title</h2>
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam itaque
@@ -47,7 +47,7 @@
         </p>
       </article>
 
-      <article>
+      <article id="anything">
         <h2>Article Title</h2>
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam itaque
