--- a/semantic.html
+++ b/semantic.html
@@ -4,33 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Semantic Tags</title>
-<link rel="stylesheet" href="apna_khud_ka_naam.css">
+    <link rel="stylesheet" href="apna_khud_ka_naam.css" />
 
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+      }
 
-<style>
-*{
-  margin: 0;
-  padding: 0;
-}
-
-
-body{
-  background-color: tan;
-  font-family:Georgia, 'Times New Roman', Times, serif ;
-  color: brown;
-  padding-top:20px;
-  padding-bottom: 20px;
-  margin: 20px;
-}
-
-
-
-</style>
-
-
+      body {
+        background-color: tan;
+        font-family: Georgia, "Times New Roman", Times, serif;
+        color: brown;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        margin: 20px;
+      }
+    </style>
   </head>
   <body>
-    <header style="border: 5px solid salmon; background-color: cornflowerblue;">
+    <header style="border: 5px solid salmon; background-color: cornflowerblue">
       <h1>Website Title</h1>
 
       <nav>Navigation Menu</nav>
@@ -47,8 +40,7 @@ body{
         </p>
       </article>
 
-
-      <article style="background-color: aqua;">
+      <article style="background-color: aqua">
         <h2>Article Title</h2>
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam itaque
